syntax = "proto3";
option optimize_for = LITE_RUNTIME;
option java_package = "com.saic.val.proto";
option java_outer_classname = "CloudSceneSyncProxy_SOA20_SOA_0_2";
option java_multiple_files = false;

package cloudscenesyncproxy;

import "servicebase.proto";

//BaseStruct Define
message BindingDetailResp {
    BindingStruct binding = 1;
    uint32 code = 2;
    string message = 3;
    uint64 serverTime = 4;
    string transactionId = 5;
    string type = 6;
}

message BindingKeyResp {
    uint32 code = 1;
    string message = 2;
    uint64 serverTime = 3;
    string transactionId = 4;
    string type = 5;
}

message BindingListResp {
    repeated BindingStruct bindingList = 1;
    uint32 code = 2;
    string message = 3;
    uint64 serverTime = 4;
    string transactionId = 5;
    string type = 6;
}

message BindingStruct {
    bool deleteFlag = 1;
    uint32 key = 2;
    uint64 modifyTime = 3;
    uint32 sceneId = 4;
    string uuid = 5;
}

message CreateSceneIdResp {
    uint32 code = 1;
    string message = 2;
    uint32 sceneId = 3;
    uint64 serverTime = 4;
    string transactionId = 5;
    string type = 6;
}

message DeliveryStatusInfoStruct {
    string address = 1;
    string deliveryStatus = 2;
}

message ExchangeSceneInfoResp {
    repeated SceneListStruct sceneList = 1;
    uint32 code = 2;
    string message = 3;
    uint64 serverTime = 4;
    string transactionId = 5;
    string type = 6;
}

message GetMessageDeliveryStatusResp {
    string correlator = 1;
    DeliveryStatusInfoStruct deliveryStatusInfo = 2;
}

message RemovSceneFileResp {
    uint32 code = 1;
    string message = 2;
    uint64 serverTime = 3;
    string transactionId = 4;
    string type = 5;
}

message ResetSceneFileResp {
    uint32 code = 1;
    string message = 2;
    uint64 serverTime = 3;
    string transactionId = 4;
    string type = 5;
}

message ResourceVersionListResp {
    repeated ServiceResourceStruct resourceVersionList = 1;
    uint32 code = 2;
    string message = 3;
    uint64 serverTime = 4;
    string transactionId = 5;
    string type = 6;
}

message SceneListStruct {
    bool deleteFlag = 1;
    uint64 modifyTime = 2;
    uint32 sceneId = 3;
    string uuid = 4;
}

message SendMessageResp {
    uint32 code = 1;
    string message = 2;
    string result = 3;
    uint64 serverTime = 4;
    string transactionId = 5;
    string type = 6;
}

message ServiceResourceStruct {
    string InstanceId = 1;
    string name = 2;
    string ServiceId = 3;
}

message UnbindingKeyResp {
    uint32 code = 1;
    string message = 2;
    uint64 serverTime = 3;
    string transactionId = 4;
    string type = 5;
}

//Method &Event & Field Params(Input&Output)
message BindingKeyUpdateInput {
    string action = 1;
    uint32 key = 2;
    uint32 sceneId = 3;
    string source = 4;
    uint64 userId = 5;
}

message BindingKeyUpdateOutput {
    BindingKeyResp bindingKeyResp = 1;
}

message BindingKeyUpdateMethod{
    BindingKeyUpdateInput input = 1;
    BindingKeyUpdateOutput output = 2;
}

message CreatSceneIdInput {
    string action = 1;
    uint64 userId = 2;
}

message CreatSceneIdOutput {
    CreateSceneIdResp createSceneIdResp = 1;
}

message CreatSceneIdMethod{
    CreatSceneIdInput input = 1;
    CreatSceneIdOutput output = 2;
}

message ExchangeSceneInfoInput {
    string action = 1;
    repeated uint32 sceneIds = 2;
    uint64 userId = 3;
}

message ExchangeSceneInfoOutput {
    ExchangeSceneInfoResp exchangeSceneInfoResp = 1;
}

message ExchangeSceneInfoMethod{
    ExchangeSceneInfoInput input = 1;
    ExchangeSceneInfoOutput output = 2;
}

message GetMessageDeliveryStatusInput {
    string requestIdentifier = 1;
}

message GetMessageDeliveryStatusOutput {
    GetMessageDeliveryStatusResp getMessageDeliveryStatusResp = 1;
}

message GetMessageDeliveryStatusMethod{
    GetMessageDeliveryStatusInput input = 1;
    GetMessageDeliveryStatusOutput output = 2;
}

message QueryBindingDetailInput {
    string action = 1;
    uint32 key = 2;
    string source = 3;
    uint64 userId = 4;
}

message QueryBindingDetailOutput {
    BindingDetailResp bindingDetailResp = 1;
}

message QueryBindingDetailMethod{
    QueryBindingDetailInput input = 1;
    QueryBindingDetailOutput output = 2;
}

message QueryBindingListInput {
    string action = 1;
    string source = 2;
    uint64 userId = 3;
}

message QueryBindingListOutput {
    BindingListResp bindingListResp = 1;
}

message QueryBindingListMethod{
    QueryBindingListInput input = 1;
    QueryBindingListOutput output = 2;
}

message RemoveSceneFileInput {
    string action = 1;
    string isHardDelete = 2;
    uint64 modifyTime = 3;
    uint32 sceneId = 4;
    string source = 5;
    uint64 userId = 6;
}

message RemoveSceneFileOutput {
    RemovSceneFileResp removSceneFileResp = 1;
}

message RemoveSceneFileMethod{
    RemoveSceneFileInput input = 1;
    RemoveSceneFileOutput output = 2;
}

message ResetSceneFileInput {
    string action = 1;
    uint64 modifyTime = 2;
    uint32 sceneId = 3;
    string source = 4;
    uint64 userId = 5;
}

message ResetSceneFileOutput {
    ResetSceneFileResp resetSceneFileResp = 1;
}

message ResetSceneFileMethod{
    ResetSceneFileInput input = 1;
    ResetSceneFileOutput output = 2;
}

message ResourceVersionListInput {
    string source = 1;
    uint64 userId = 2;
}

message ResourceVersionListOutput {
    ResourceVersionListResp resourceVersionListResp = 1;
}

message ResourceVersionListMethod{
    ResourceVersionListInput input = 1;
    ResourceVersionListOutput output = 2;
}

message SendMessageInput {
    string action = 1;
    string content = 2;
    string preferChannel = 3;
    string type = 4;
    uint64 userId = 5;
}

message SendMessageOutput {
    SendMessageResp sendMessageResp = 1;
}

message SendMessageMethod{
    SendMessageInput input = 1;
    SendMessageOutput output = 2;
}

message UnbindingKeyInput {
    string action = 1;
    uint32 key = 2;
    uint32 sceneId = 3;
    string source = 4;
    uint64 userId = 5;
}

message UnbindingKeyOutput {
    UnbindingKeyResp unbindingKeyResp = 1;
}

message UnbindingKeyMethod{
    UnbindingKeyInput input = 1;
    UnbindingKeyOutput output = 2;
}


//CloudSceneSyncProxyInfo
message CloudSceneSyncProxyInfo {

    enum servicename {
        CLOUDSCENESYNCPROXY = 0;
    }
    enum serviceid {
        SERVICEFLAG = 0;
    }

    enum methods {
        Method_Undefined = 0;
        BindingKeyUpdateMethod = 1;
        CreatSceneIdMethod = 2;
        ExchangeSceneInfoMethod = 3;
        GetMessageDeliveryStatusMethod = 4;
        QueryBindingDetailMethod = 5;
        QueryBindingListMethod = 6;
        RemoveSceneFileMethod = 7;
        ResetSceneFileMethod = 8;
        ResourceVersionListMethod = 9;
        SendMessageMethod = 10;
        UnbindingKeyMethod = 11;
    }
    enum events {
        Event_Undefined = 0;
    }

    enum fields {
        Fields_Undefined = 0;
    }

    servicebase.serviceheader srvHeader = 1;

    BindingKeyUpdateMethod BindingKeyUpdateParam = 2;
    CreatSceneIdMethod CreatSceneIdParam = 3;
    ExchangeSceneInfoMethod ExchangeSceneInfoParam = 4;
    GetMessageDeliveryStatusMethod GetMessageDeliveryStatusParam = 5;
    QueryBindingDetailMethod QueryBindingDetailParam = 6;
    QueryBindingListMethod QueryBindingListParam = 7;
    RemoveSceneFileMethod RemoveSceneFileParam = 8;
    ResetSceneFileMethod ResetSceneFileParam = 9;
    ResourceVersionListMethod ResourceVersionListParam = 10;
    SendMessageMethod SendMessageParam = 11;
    UnbindingKeyMethod UnbindingKeyParam = 12;
}
